# GRE

./: .gitignore  CMakeLists.txt
data_profiler/: generate_bulky_index.py  plot_CDF.ipynb
script/: results.ipynb  throughput.sh  throughput_bal.sh  throughput_ro.sh  throughput_visualization.ipynb  throughput_wo.sh
src/benchmark/: benchmark.h  microbench.cpp  utils.h
src/competitor/: competitor.h  indexInterface.h
src/competitor/alex/: alex.h
src/competitor/alexol/: alex.h
src/competitor/alexol/src/: alex.h  alex_nodes.h
